Fix design on mobile devices and optimizer
Also removed unneeded js library that the editor loads itself

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 .editor {
 	position: relative;
 	width: 100%;
-	height: 80vh;
+	height: 83vh;
 }
 
 .card-editor {
@@ -23,4 +23,27 @@
 
 .section {
 	margin-top: 20px !important;
+}
+
+.btn {
+	padding: 0 31px;
+}
+
+.button {
+	margin-top: 8px;
+}
+
+@media only screen and (max-width: 768px) {
+	.editor {
+		max-height: 72vh;
+	}
+
+	.button {
+		width: 100%;
+	}
+
+	.btn {
+		height: 54px;
+		line-height: 54px;
+	}
 }
